--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 html {
-    background: #018DED url(https://unsplash.it/1500/1000?image=881&blur=5);
+    background: url(https://source.unsplash.com/XUlsF9LYeVk);
     background-size: cover;
     font-family: 'helvetica neue';
     text-align: center;
@@ -43,4 +43,8 @@ html {
     background: black;
     position: absolute;
     top: 50%;
+    transform-origin: 100%;
+    transform: rotate(90deg) ;
+    transition: all 0.05s;
+    transition-timing-function: cubic-bezier(0.13, 2.09, 0.27, 1.73)
   }
